// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-0 {
  cursor: pointer;
  height: 1rem;
  margin: 0;
  opacity: 0;
  position: absolute;
  width: 1rem;
  z-index: 1;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:focus + span {
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  margin: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #CFD9E0;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1rem;
  background-color: #ffffff;
  border-radius: 4px;
}

.emotion-2 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 16px;
  width: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  color: #111B2B;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  class="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-7"
      data-test-id="cf-ui-checkbox-field"
    >
      <label
        class="emotion-3"
        data-test-id="cf-ui-base-checkbox"
        for="agree"
      >
        <input
          aria-checked="false"
          aria-label="Do you agree?"
          class="emotion-0"
          id="agree"
          role="checkbox"
          type="checkbox"
          value=""
        />
        <span
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </span>
      </label>
      <div
        class="emotion-6"
      >
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-7"
      data-test-id="cf-ui-checkbox-field"
    >
      <label
        class="emotion-3"
        data-test-id="cf-ui-base-checkbox"
        for="reallyAgree"
      >
        <input
          aria-checked="false"
          aria-label="Do you really agree?"
          class="emotion-0"
          id="reallyAgree"
          role="checkbox"
          type="checkbox"
          value=""
        />
        <span
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </span>
      </label>
      <div
        class="emotion-6"
      >
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-0 {
  cursor: pointer;
  height: 1rem;
  margin: 0;
  opacity: 0;
  position: absolute;
  width: 1rem;
  z-index: 1;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:focus + span {
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  margin: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #CFD9E0;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1rem;
  background-color: #ffffff;
  border-radius: 4px;
}

.emotion-2 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 16px;
  width: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  color: #111B2B;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  class="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-7"
      data-test-id="cf-ui-checkbox-field"
    >
      <label
        class="emotion-3"
        data-test-id="cf-ui-base-checkbox"
        for="agree"
      >
        <input
          aria-checked="false"
          aria-label="Do you agree?"
          class="emotion-0"
          id="agree"
          role="checkbox"
          type="checkbox"
          value=""
        />
        <span
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </span>
      </label>
      <div
        class="emotion-6"
      >
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-7"
      data-test-id="cf-ui-checkbox-field"
    >
      <label
        class="emotion-3"
        data-test-id="cf-ui-base-checkbox"
        for="reallyAgree"
      >
        <input
          aria-checked="false"
          aria-label="Do you really agree?"
          class="emotion-0"
          id="reallyAgree"
          role="checkbox"
          type="checkbox"
          value=""
        />
        <span
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </span>
      </label>
      <div
        class="emotion-6"
      >
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-0 {
  cursor: pointer;
  height: 1rem;
  margin: 0;
  opacity: 0;
  position: absolute;
  width: 1rem;
  z-index: 1;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:focus + span {
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  margin: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #CFD9E0;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1rem;
  background-color: #ffffff;
  border-radius: 4px;
}

.emotion-2 svg {
  fill: #ffffff;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 16px;
  width: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  color: #111B2B;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  class="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-7"
      data-test-id="cf-ui-checkbox-field"
    >
      <label
        class="emotion-3"
        data-test-id="cf-ui-base-checkbox"
        for="agree"
      >
        <input
          aria-checked="false"
          aria-label="Do you agree?"
          class="emotion-0"
          id="agree"
          role="checkbox"
          type="checkbox"
          value=""
        />
        <span
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </span>
      </label>
      <div
        class="emotion-6"
      >
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-7"
      data-test-id="cf-ui-checkbox-field"
    >
      <label
        class="emotion-3"
        data-test-id="cf-ui-base-checkbox"
        for="reallyAgree"
      >
        <input
          aria-checked="false"
          aria-label="Do you really agree?"
          class="emotion-0"
          id="reallyAgree"
          role="checkbox"
          type="checkbox"
          value=""
        />
        <span
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </span>
      </label>
      <div
        class="emotion-6"
      >
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;
